--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ h1,p{
     margin-top: 400px;
     min-height: 100vh;
     width: 100vw;
-    border: 2px solid black;
+
    position: relative;
 }
 .search-sec{
@@ -154,3 +154,11 @@ h1,p{
     max-width: 90%; 
     margin: 10px 0; 
   }
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   height: 80vh;
+   background-color: navajowhite;
+}
